<resources>

    <string name="action_settings">Settings</string>

    <!-- タイトル -->
    <string name="app_name">DBSample</string>
    <string name="name_selectsheet_product">品名一覧画面</string>
    <string name="name_selectsheet_listview">ListView表示画面</string>
    <string name="name_selectsheet_tabel">TableLayout表示画面</string>

    <!-- ここからactivity_main 01関連 -->
    <string name="text01_product">品名</string>
    <string name="text01_madein">産地</string>
    <string name="text01_number">個数</string>
    <string name="text01_price">単価</string>
    <string name="text01_kome">※</string>
    <string name="text01_hinttext">全角・半角12文字以内</string>
    <string name="text01_hintnumber">半角数字</string>
    <string name="button01_regist">登録</string>
    <string name="button01_show">表示</string>

    <!-- 選択用RadioButton -->
    <string name="radio01_product">品名一覧 (ListView×ArrayAdapter)</string>
    <string name="radio01_listview">ListView表示 (ListView×BaseAdapter)</string>
    <string name="radio01_tablelayout">TableLayout表示</string>
    <!-- ここまで -->

    <!-- ここからselect_sheet_product 02関連 -->
    <!-- select_sheet_product 02 -->
    <string name="text02_title_detail">ListViewを表示する為にArrayAdapterを使ってシンプルに品名だけをリスト表示します。</string>
    <string name="text02_title">品名一覧</string>
    <string name="button02_alldelete">全削除</string>

    <!-- row_sheet_listview 05 -->
    <string name="text05_title_madein">産地：</string>
    <string name="text05_title_number">個数：</string>
    <string name="text05_title_price">単価：</string>
    <!-- ここまで -->

    <!-- select_sheet_listview 03 -->
    <string name="text03_title_detail">BaseAdapterを使いListViewをカスタムしてリスト表示します。</string>

    <!-- select_sheet_table 04 -->
    <string name="text04_title_detail">SearchViewを使って品名を検索し、DBから取得したデータをTableRowに加えていく表示の仕方です。</string>
    <string name="text04_hinttext">品名を入力して下さい。</string>
    <string name="button04_search">検索</string>








    <!-- ここからactivity_main 01関連 -->
    <string name="text01x_product">品名</string>
    <string name="text01x_madein">産地</string>
    <string name="text01x_number">個数</string>
    <string name="text01x_price">単価</string>
    <string name="text01x_kome">※</string>
    <string name="text01x_hinttext">全角・半角12文字以内</string>
    <string name="text01x_hintnumber">半角数字</string>
    <string name="button01x_regist">保存</string>
    <string name="button01x_show">表示</string>

    <!-- 選択用RadioButton -->
    <string name="radio01x_product">品名一覧 (ListView×ArrayAdapter)</string>
    <string name="radio01x_listview">ListView表示 (ListView×BaseAdapter)</string>
    <string name="radio01x_tablelayout">TableLayout表示</string>
    <!-- ここまで -->

    <!-- ここからselect_sheet_product 02関連 -->
    <!-- select_sheet_product 02 -->
    <string name="text02x_title_detail">ListViewを表示する為にArrayAdapterを使ってシンプルに品名だけをリスト表示します。</string>
    <string name="text02x_title">品名一覧</string>
    <string name="button02x_alldelete">全削除</string>

    <!-- row_sheet_listview 05 -->
    <string name="text05x_title_madein">産地：</string>
    <string name="text05x_title_number">個数：</string>
    <string name="text05x_title_price">単価：</string>
    <!-- ここまで -->

    <!-- select_sheet_listview 03 -->
    <string name="text03x_title_detail">BaseAdapterを使いListViewをカスタムしてリスト表示します。</string>

    <!-- select_sheet_table 04 -->
    <string name="text04x_title_detail">SearchViewを使って品名を検索し、DBから取得したデータをTableRowに加えていく表示の仕方です。</string>
    <string name="text04x_hinttext">品名を入力して下さい。</string>
    <string name="button04x_search">検索</string>


</resources>