<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dbsample.MainActivity">

    <!-- 品名 -->
    <LinearLayout
        android:id="@+id/linearLayout01xProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text01xProduct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/text01_product"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text01xKome01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/text01_kome"
            android:textColor="#FF0000"
            android:textSize="14sp" />

        <!-- ellipsize：文字が行に収まりきらない末尾を「...」表示 -->
        <!-- inputType：表示するキーボードを文字に指定 -->
        <EditText
            android:id="@+id/editText01xProduct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ellipsize="end"
            android:hint="@string/text01_hinttext"
            android:inputType="text"
            android:lines="1"
            android:maxLength="12"
            android:maxLines="1"
            android:minLines="1"
            android:singleLine="true"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- 産地 -->
    <LinearLayout
        android:id="@+id/linearLayout01xMadeIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout01xProduct"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text01xMadeIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/text01_madein"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text01xKome02"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/text01_kome"
            android:textColor="#FF0000"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editText01xMadeIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ellipsize="end"
            android:hint="@string/text01_hinttext"
            android:inputType="text"
            android:lines="1"
            android:maxLength="12"
            android:maxLines="1"
            android:minLines="1"
            android:singleLine="true"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- 個数 -->
    <LinearLayout
        android:id="@+id/linearLayout01xNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout01xPrice"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text01xNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/text01_number"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text01xKome03"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/text01_kome"
            android:textColor="#FF0000"
            android:textSize="14sp" />

        <!-- inputType：表示するキーボードを数値に指定 -->
        <EditText
            android:id="@+id/editText01xNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ellipsize="end"
            android:hint="@string/text01_hintnumber"
            android:inputType="number"
            android:lines="1"
            android:maxLength="24"
            android:maxLines="1"
            android:minLines="1"
            android:singleLine="true"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- 単価 -->
    <LinearLayout
        android:id="@+id/linearLayout01xPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout01xMadeIn"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text01xPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/text01_price"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text01xKome04"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/text01_kome"
            android:textColor="#FF0000"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editText01xPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ellipsize="end"
            android:hint="@string/text01_hintnumber"
            android:inputType="number"
            android:lines="1"
            android:maxLength="24"
            android:maxLines="1"
            android:minLines="1"
            android:singleLine="true"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- 登録ボタン -->
    <Button
        android:id="@+id/button01xRegist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="212dp"
        android:text="保存"
        android:textSize="16sp" />

</RelativeLayout>