<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dbsample.MainActivity">

    <!--ユーザ  -->
    <LinearLayout
        android:id="@+id/linearLayout01User"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text01User"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="ユーザ"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text01Kome01"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/text01_kome"
            android:textColor="#FF0000"
            android:textSize="14sp" />

        <!-- ellipsize：文字が行に収まりきらない末尾を「...」表示 -->
        <!-- inputType：表示するキーボードを文字に指定 -->

    </LinearLayout>

    <!-- 日付 -->
    <LinearLayout
        android:id="@+id/linearLayout01Date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout01User"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text01Date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="日付"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text01Kome02"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/text01_kome"
            android:textColor="#FF0000"
            android:textSize="14sp" />


    </LinearLayout>

    <!-- メモ -->
    <LinearLayout
        android:id="@+id/linearLayout01Memo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout01Date"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text01Memo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="メモ"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text01Kome03"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/text01_kome"
            android:textColor="#FF0000"
            android:textSize="14sp" />

        <!-- inputType：表示するキーボードを数値に指定 -->

    </LinearLayout>
    <!-- バー -->
    <LinearLayout
        android:id="@+id/linearLayout01Product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout01Memo"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/text01Product"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="バー"
        android:textColor="#000000"

        android:textSize="16sp" />



    <!-- ellipsize：文字が行に収まりきらない末尾を「...」表示 -->
    <!-- inputType：表示するキーボードを文字に指定 -->
    <EditText
        android:id="@+id/editText01Product"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:ellipsize="end"
        android:hint="@string/text01_hinttext"
        android:inputType="text"
        android:lines="1"
        android:maxLength="12"
        android:maxLines="1"
        android:minLines="1"
        android:singleLine="true"
        android:textSize="16sp" />
</LinearLayout>


    <!-- 登録ボタン -->
    <Button
        android:id="@+id/button01Regist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button01Show"
        android:layout_alignParentTop="true"
        android:layout_marginTop="171dp"
        android:text="@string/button01_regist"
        android:textSize="16sp" />

    <!-- 選択用ラジオボタン -->
    <RadioGroup
        android:id="@+id/radioGroup01"
        android:layout_width="match_parent"
        android:layout_height="127dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="106dp">

        <RadioButton
            android:id="@+id/radioButton01Product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="入力バー一覧"
            android:textColor="#000000"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButton01TableLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checked="false"
            android:text="個別検索"
            android:textColor="#000000"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButton01ListView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checked="false"
            android:text="詳細一覧"
            android:textColor="#000000"
            android:textSize="16sp" />

    </RadioGroup>

    <!-- 表示ボタン -->
    <Button
        android:id="@+id/button01Show"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:text="@string/button01_show"
        android:textSize="16sp" />




</RelativeLayout>